<resources>
    <string name="app_name">GithubUserApp</string>
    <string name="with_cardview">Card View</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="find_username">Find UserName</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Name</string>
    <string name="item_username">UserName</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="location">Location</string>

</resources>