<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:padding="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="8dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="97dp"
                android:layout_height="90dp"
                android:contentDescription="@string/with_cardview"
                android:scaleType="centerCrop"
                tools:src="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/img_item_photo"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/tv_item_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tv_item_name"
                android:layout_alignTop="@+id/tv_item_name"
                android:layout_alignBottom="@+id/img_item_photo"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="3dp"
                android:ellipsize="end"
                android:maxLines="5"
                tools:text="@string/user_name" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>